--- a/g-f/login/login.html
+++ b/g-f/login/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <form class="login-box">
-            <h2>Login</h2>
+            <h2>Logi</h2>
 
             <div class="input-group">
                 <label>Email</label>
