--- a/gourav-front/main1-folder/main1.html
+++ b/gourav-front/main1-folder/main1.html
@@ -4,42 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Dashboard | Fatima Degree College</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="main1.css">
 </head>
 <body>
 
   <header class="header">
-    <div class="header-text">
-      <h2>Welcome, <span>Ananya Sharma</span></h2>
-      <p>Roll: 21BC1023</p>
+    <h1 class="college-name">FATIMA DEGREE COLLEGE</h1>
+    <h2 class="project-title">AI Based Attendance Monitoring System</h2>
+
+    <div class="header-info">
+      <h3>Welcome, <span id="student-name">Ananya Sharma</span></h3>
+      <p id="student-roll">Roll: 21BC1023</p>
     </div>
-    <p class="date">Friday, 28 Nov 2025</p>
+
+    <p class="date" id="current-date">Friday, 28 Nov 2025</p>
   </header>
 
   <main class="container">
 
     <section class="attendance-card">
       <h3>Overall Attendance</h3>
-      <div class="circle">87%</div>
+      <div class="circle">
+        <span id="overall-attendance">87%</span>
+      </div>
     </section>
 
     <section class="alerts-box">
       <h3>Alerts</h3>
-      <p>
-        You are close to attendance shortage in Data Structures.
-        Attend the next 3 days regularly.
-      </p>
-    </section>
-
-    <section class="dropdown">
-      <button class="dropbtn" onclick="toggleDropdown()">
-        View Full Attendance ▼
-      </button>
-      <div id="dropdown-content" class="dropdown-content">
-        <p>Data Structures – 82%</p>
-        <p>DBMS – 90%</p>
-        <p>Operating Systems – 80%</p>
-        <p>Mathematics – 95%</p>
+      <div class="alert-message">
+        <p id="alert-text">
+          You are close to attendance shortage in Data Structures. Attend the next 3 days regularly.
+        </p>
       </div>
     </section>
 
@@ -49,11 +44,6 @@
     © 2025 Fatima Degree College
   </footer>
 
-  <script>
-    function toggleDropdown() {
-      document.getElementById("dropdown-content").classList.toggle("show");
-    }
-  </script>
-
+  <script src="main1.js"></script>
 </body>
 </html>
